# NetMonitorCLI

./: .gitignore  CMakeLists.txt  main.cpp  speed_test.cpp
SpeedTest/: DownloadSpeedTest.cpp  UploadSpeedTest.cpp
